@@ -67,8 +67,6 @@ Blu.^create-table;
 
 $*RED-DB.when: :once, :return[{:1id}],            q[insert into blu default values];
 $*RED-DB.when: :once, :return[{:1id, :1blu-id},], q[insert into blo( blu_id )values( ? )];
-$*RED-DB.when: :once, :return[{:1id},],           q[select blu.id from blu where blu.id = 1 limit 1];
-$*RED-DB.when: :once, :return[{:1blu-id},],       q[select blo.blu_id as "blu-id" , blo.id from blo where blo.id = 1 limit 1];
 
 my $blu = Blu.^create;
 my $blo = $blu.blo.create;
